# mwparallelparser

./: .gitignore  LICENCE  MANIFEST.in  README.md  README.rst  setup.cfg
src/mwparallelparser/: __init__.py  handler.py  mode_bind  parser.py  tokens
tests/: conftest.py  parse_wikicode.py  test_doublebraces.py  test_formatting.py  test_header.py  test_list.py  test_paragraph.py  test_ref.py  test_simple_tags.py  test_table.py  test_wikilink.py
