[metadata]
name = mwparallelparser
version = 1.0
author = Szymon Olewniczak
author_email = szyolewn@pg.edu.pl
description = A MediaWiki syntax parser that uses parallel markup approach
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/solewniczak/mwparallelparser
project_urls =
    Bug Tracker = https://github.com/solewniczak/mwparallelparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mwparallelparser
packages = find:
python_requires = >=3.8

[options.packages.find]
where = mwparallelparser