[metadata]
name = mwparallelparser
version = attr: mwparallelparser.__version__
author = Szymon Olewniczak
author_email = szyolewn@pg.edu.pl
description = A MediaWiki syntax parser that uses parallel markup approach
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/solewniczak/mwparallelparser
project_urls =
    Bug Tracker = https://github.com/solewniczak/mwparallelparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = true

[options.packages.find]
where = src